@@ -14,6 +14,7 @@
 | <a href="{% url 'richtzeiten' wettkampf.jahr wettkampf.name disziplin.name %}">Bestzeiten</a>
 | <a href="{% url 'beste_schiffe' wettkampf.jahr wettkampf.name disziplin.name %}">Beste Schiffe pro Sektion</a>
 | <a href="{% url 'beste_saisonpaare' wettkampf.jahr wettkampf.name disziplin.name kategorie.name %}">Beste Saisonpaare</a>
+| <a href="{% url 'aelteste_fahrerpaare' wettkampf.jahr wettkampf.name disziplin.name %}">Älteste Fahrerpaare</a>
 <p></p>
 <table class="list">
   <tr>
